Update NocNotificationService.java